gccida/g2/immed_double_const
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/immed_double_const/src/varasm.c:2569:50: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  immed_double_const( __int64 i0, __int64 i1, machine_mode mode) 
                                                 ^
                                                 enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/immed_double_const/src/varasm.c:2574:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/immed_double_const/src/varasm.c:2578:8: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( mode_class_0[mode] & 0xFFFFFFFD) == 1 ) 
       ^~~~~~~~~~~~
       mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/immed_double_const/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/immed_double_const/src/varasm.c:2603:19: error: invalid operands to binary expression ('struct rtx_def' and 'long long')
while ( result[1] != v3 || result[1].fld[0].rtwint != i1 || *( ( unsigned __int8 *)result + 2) != v6 ) 
        ~~~~~~~~~ ^  ~~
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/immed_double_const/src/obj/varasm.o] Error 1
